--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,9 +3,9 @@ set -g default-terminal xterm-256color
 set -g status-keys vi
  
 # Prefix
-set-option -g prefix `
-unbind-key `
-bind-key ` send-prefix
+set-option -g prefix '\'
+unbind-key '\'
+bind-key '\' send-prefix
 
 # start windows numbering at 1
 set -g base-index 1
@@ -15,10 +15,15 @@ setw -g pane-base-index 1
  
 # rename window to reflect current program
 setw -g automatic-rename on
+
 # renumber windows when a window is closed
 set -g renumber-windows on
 
-set -g set-titles on          # set terminal title
+# Add a bit more scroll history in the buffer.
+set -g history-limit 50000
+
+# set terminal title
+set -g set-titles on
 
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
@@ -57,3 +62,21 @@ set-option -g repeat-time 0
 
 # Set mouse mode on
 set -g mouse on
+
+# Set clipboard on
+set -g set-clipboard on
+
+#####################
+# Plugins Section   #
+#####################
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
