--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,9 @@ source '/usr/share/powerline/bindings/tmux/powerline.conf'
 # No delay for escape key press
 set -sg escape-time 0
 
+# Select yank mouse selection clipboard
+set -g @yank_selection_mouse 'clipboard'
+
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
