Set vim mode as default for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # Initial setup
 set -g default-terminal xterm-256color
 set -g status-keys vi
+set-window-option -g mode-keys vi
  
 # Prefix
 set-option -g prefix '\'
