--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,6 @@
 # Initial setup
 set -g default-terminal xterm-256color
 set -g status-keys vi
-set-window-option -g mode-keys vi
  
 # Prefix
 set-option -g prefix '\'
@@ -13,7 +12,14 @@ set -g base-index 1
 
 # make pane numbering consistent with windows
 setw -g pane-base-index 1
- 
+
+# Key bindings for copy-paste
+set-window-option -g mode-keys vi
+unbind p
+bind p paste-buffer
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
 # rename window to reflect current program
 setw -g automatic-rename on
 
