Add tmux using python

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,7 +36,8 @@ set -g set-titles on
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Use powerline for status bar
-source '/usr/share/powerline/bindings/tmux/powerline.conf'
+#source '/usr/share/powerline/bindings/tmux/powerline.conf'
+source '/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # Show status bar to top
 # set-option -g status-position top
