--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Use powerline for status bar
 #source '/usr/share/powerline/bindings/tmux/powerline.conf'
-source '/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
+source "${HOMEBREW_PREFIX}/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Show status bar to top
 # set-option -g status-position top
