Add 'onehalf' theme for vim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Initial setup
 set -g default-terminal xterm-256color
+set -ga terminal-overrides ",*256col*:Tc"
 set -g status-keys vi
  
 # Prefix
