Add swapping windows shortcut

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,6 +53,10 @@ set -g @yank_selection_mouse 'clipboard'
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# Swap window left and right
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+
 # Set easier window split keys
 bind-key v split-window -h
 bind-key h split-window -v
