Tmux reverted back to start pane and window from 0. Improvement in zshrc

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,10 +9,10 @@ unbind-key '\'
 bind-key '\' send-prefix
 
 # start windows numbering at 1
-set -g base-index 1
+#set -g base-index 1
 
 # make pane numbering consistent with windows
-setw -g pane-base-index 1
+#setw -g pane-base-index 1
 
 # Key bindings for copy-paste
 set-window-option -g mode-keys vi
