Add powerline status prefix variable for tmux status consistent settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,7 +38,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Use powerline for status bar
 #source '/usr/share/powerline/bindings/tmux/powerline.conf'
-source "`pip3 show powerline-status | grep Location | awk '{print $2}'`/powerline/bindings/tmux/powerline.conf"
+source "${POWERLINE_STATUS_PREFIX}/powerline/bindings/tmux/powerline.conf"
 #source "${HOMEBREW_PREFIX}/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Show status bar to top
