Add custom Tmux status line config with Solarized Light Theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,10 +9,10 @@ unbind-key '\'
 bind-key '\' send-prefix
 
 # start windows numbering at 1
-#set -g base-index 1
+set -g base-index 1
 
 # make pane numbering consistent with windows
-#setw -g pane-base-index 1
+setw -g pane-base-index 1
 
 # Key bindings for copy-paste
 set-window-option -g mode-keys vi
@@ -36,13 +36,25 @@ set -g set-titles on
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-# Use powerline for status bar
-#source '/usr/share/powerline/bindings/tmux/powerline.conf'
-source "${POWERLINE_STATUS_PREFIX}/powerline/bindings/tmux/powerline.conf"
-#source "${HOMEBREW_PREFIX}/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
-
-# Show status bar to top
-# set-option -g status-position top
+# Status line config
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=#eee8d5,bg=#93a1a1"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#657b83"
+set -g status-style "none,bg=#eee8d5"
+set -g message-style "fg=#eee8d5,bg=#93a1a1"
+set -g pane-border-style "fg=#93a1a1"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#93a1a1,bg=#eee8d5"
+set -g status-left "#[fg=#eee8d5,bg=#657b83,bold] #S #[fg=#657b83,bg=#eee8d5,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] %d-%m-%Y %H:%M #[fg=#657b83,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#657b83] #h "
+setw -g window-status-format "#[fg=#93a1a1,bg=#eee8d5] #I #[fg=#93a1a1,bg=#eee8d5] #W "
+setw -g window-status-current-format "#[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] #I #[fg=#eee8d5,bg=#93a1a1] #W #[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]"
 
 # No delay for escape key press
 set -sg escape-time 0
