--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,9 +50,10 @@ set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
+set-option -g @tmux-weather-location "Melbourne"
 setw -g window-status-style "none,fg=#93a1a1,bg=#eee8d5"
-set -g status-left "#[fg=#eee8d5,bg=#657b83,bold] #S #[fg=#657b83,bg=#eee8d5,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] %d-%m-%Y %H:%M #[fg=#657b83,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#657b83] #h "
+set -g status-left "#[fg=#eee8d5,bg=#657b83,bold] #h #[fg=#657b83,bg=#eee8d5,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] #{network_bandwidth}  #{weather} #[fg=#657b83,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#657b83] %a %d %b %Y %H:%M #[fg=#eee8d5,bg=#657b83]"
 setw -g window-status-format "#[fg=#93a1a1,bg=#eee8d5] #I #[fg=#93a1a1,bg=#eee8d5] #W "
 setw -g window-status-current-format "#[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] #I #[fg=#eee8d5,bg=#93a1a1] #W#{?window_zoomed_flag,#[fg=#880808]*,} #[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]"
 
@@ -119,7 +120,8 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'xamut/tmux-network-bandwidth'
+set -g @plugin 'xamut/tmux-weather'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
