--- a/Iterm/com.googlecode.iterm2.plist
+++ b/Iterm/com.googlecode.iterm2.plist
@@ -1505,7 +1505,7 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>HackNerdFontComplete-Regular 14</string>
+			<string>Menlo-Regular 11</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Non-ASCII Ligatures</key>
