Extract tmux status line color config in a file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Initial setup
-set -g default-terminal xterm-256color
+set -g default-terminal screen-256color
 set -ga terminal-overrides ",*256col*:Tc"
 set -g status-keys vi
 
@@ -36,28 +36,7 @@ set -g set-titles on
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-source-file ~/Documents/IdeaProjects/terminal-configs/tmux/tmux-gruvbox-dark.conf
-
-# Status line config
-#set -g status-justify "left"
-#set -g status "on"
-#set -g status-left-style "none"
-#set -g message-command-style "fg=#eee8d5,bg=#93a1a1"
-#set -g status-right-style "none"
-#set -g pane-active-border-style "fg=#657b83"
-#set -g status-style "none,bg=#eee8d5"
-#set -g message-style "fg=#eee8d5,bg=#93a1a1"
-#set -g pane-border-style "fg=#93a1a1"
-#set -g status-right-length "100"
-#set -g status-left-length "100"
-#setw -g window-status-activity-style "none"
-#setw -g window-status-separator ""
-#set-option -g @tmux-weather-location "Melbourne"
-#setw -g window-status-style "none,fg=#93a1a1,bg=#eee8d5"
-#set -g status-left "#[fg=#eee8d5,bg=#657b83,bold] #h #[fg=#657b83,bg=#eee8d5,nobold,nounderscore,noitalics]"
-#set -g status-right "#[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] #{network_bandwidth}  #{weather} #[fg=#657b83,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#657b83] %a %d %b %Y %H:%M #[fg=#eee8d5,bg=#657b83]"
-#setw -g window-status-format "#[fg=#93a1a1,bg=#eee8d5] #I #[fg=#93a1a1,bg=#eee8d5] #W "
-#setw -g window-status-current-format "#[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#eee8d5,bg=#93a1a1] #I #[fg=#eee8d5,bg=#93a1a1] #W#{?window_zoomed_flag,#[fg=#880808]*,} #[fg=#93a1a1,bg=#eee8d5,nobold,nounderscore,noitalics]"
+source-file tmux-gruvbox-dark.conf
 
 # No delay for escape key press
 set -sg escape-time 0
