Fix the path of theme file and change look of tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ set -g set-titles on
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-source-file tmux-gruvbox-dark.conf
+source-file ~/Documents/IdeaProjects/terminal-configs/tmux/tmux-gruvbox-dark.conf
 
 # No delay for escape key press
 set -sg escape-time 0
