--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Initial setup
-set -g default-terminal tmux-256color
+set -g default-terminal screen-256color
 set -ga terminal-overrides ",*256col*:Tc"
 set -g status-keys vi
 set-option -g focus-events on
