--- a/tmux/tmux-nord.conf
+++ b/tmux/tmux-nord.conf
@@ -54,10 +54,10 @@ set -g message-command-style bg=brightblack,fg=cyan
 #+--------+
 #+--- Bars ---+
 set -g status-left "#[fg=black,bg=blue] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{weather} │ %a %d %b %Y %H:%M #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack]#[fg=black,bg=cyan] #h #[fg=black,bg=cyan]"
+set -g status-right "#[fg=brightblack,bg=black]│#[fg=white,bg=black] #{weather} #[fg=white,bg=brightblack] %a %d %b %Y %H:%M #[fg=black,bg=cyan] #h #[fg=black,bg=cyan]"
 
 #+--- Windows ---+
-set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #I:#W #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #I:#W#{?window_zoomed_flag,*Z,} #[fg=black,bg=cyan,nobold,noitalics,nounderscore]"
+set -g window-status-format "#[fg=white,bg=brightblack] #I:#W #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[fg=black,bg=cyan,bold] #I:#W#{?window_zoomed_flag,*Z,} #[fg=black,bg=cyan,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
 
