Add generic options to main tmux configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Initial setup
-set -g default-terminal screen-256color
+set -g default-terminal xterm-256color
 set -ga terminal-overrides ",*256col*:Tc"
 set -g status-keys vi
 set-option -g focus-events on
@@ -33,6 +33,15 @@ set -g history-limit 50000
 
 # set terminal title
 set -g set-titles on
+
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+set-option -g status "on"
+set-option -g status-justify "left"
+set-option -g status-left-style none
+set-option -g status-left-length "80"
+set-option -g status-right-style none
+set-option -g status-right-length "80"
+set-window-option -g window-status-separator ""
 
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
