--- a/tmux/tmux-nord.conf
+++ b/tmux/tmux-nord.conf
@@ -53,7 +53,7 @@ set -g message-command-style bg=brightblack,fg=cyan
 #+ Status +
 #+--------+
 #+--- Bars ---+
-set -g status-left "#[fg=black,bg=blue] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+set -g status-left "#[fg=black,bg=blue] \ue795 #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
 set -g status-right "#[fg=brightblack,bg=black]│#[fg=white,bg=black] #{weather} #[fg=white,bg=brightblack] %a %d %b %Y %H:%M #[fg=black,bg=cyan] #h #[fg=black,bg=cyan]"
 
 #+--- Windows ---+
