Change tmux status line

--- a/tmux/tmux-nord.conf
+++ b/tmux/tmux-nord.conf
@@ -54,7 +54,7 @@ set -g message-command-style bg=brightblack,fg=cyan
 #+--------+
 #+--- Bars ---+
 set -g status-left "#[fg=black,bg=blue] \ue795 #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#[fg=brightblack,bg=black]│#[fg=white,bg=black] #{weather} #[fg=white,bg=brightblack] %a %d %b %Y %H:%M #[fg=black,bg=cyan] #h #[fg=black,bg=cyan]"
+set -g status-right "#[fg=white,bg=black] #[fg=white,bg=brightblack] #{weather}  %a %d %b %Y %H:%M #[fg=black,bg=cyan] #h #[fg=black,bg=cyan]"
 
 #+--- Windows ---+
 set -g window-status-format "#[fg=white,bg=brightblack] #I:#W #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]"
