--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,10 @@ set -ga terminal-overrides ",*256col*:Tc"
 set -g status-keys vi
 set-option -g focus-events on
 
+# undercurl support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # Prefix
 set-option -g prefix '\'
 unbind-key '\'
