--- a/tmux/tmux-edge-light.conf
+++ b/tmux/tmux-edge-light.conf
@@ -16,6 +16,6 @@ setw -g window-status-activity-style "none,fg=#6996e0,bg=#eef1f4"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#4b505b,bg=#eef1f4"
 set -g status-left "#[fg=#fafafa,bg=#6996e0] \ue795 #S #[fg=#6996e0,bg=#dde2e7,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#eef1f4,bg=#eef1f4,nobold,nounderscore,noitalics] #[fg=#4b505b,bg=#dde2e7] #{clima}  \uf073 %a %d %b, %Y  \ue38b %l:%M %p #[fg=#fafafa,bg=#6996e0] #h #[fg=#fafafa,bg=#6996e0]"
+set -g status-right "#[fg=#eef1f4,bg=#eef1f4,nobold,nounderscore,noitalics] #[fg=#4b505b,bg=#dde2e7] #{clima}  🗓  %a %d %b, %Y  🕑%l:%M %p #[fg=#fafafa,bg=#6996e0] #h #[fg=#fafafa,bg=#6996e0]"
 setw -g window-status-format "#[fg=#4b505b] #I:#W #[fg=#eef1f4,bg=#eef1f4,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#4b505b,bg=#dde2e7,bold] #I:#W#{?window_zoomed_flag,*Z,} #[fg=#4b505b,bg=#dde2e7,nobold,nounderscore,noitalics]"
