Use own fork for tmux weather plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -116,7 +116,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'xamut/tmux-network-bandwidth'
-set -g @plugin 'vascomfnunes/tmux-clima'
+set -g @plugin 'xafarr/tmux-clima'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
