Updated iterm preferences

--- a/Iterm/com.googlecode.iterm2.plist
+++ b/Iterm/com.googlecode.iterm2.plist
@@ -3033,13 +3033,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.35686275362968445</real>
+				<real>0.61960784313725492</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.31372550129890442</real>
+				<real>0.61960784313725492</real>
 				<key>Red Component</key>
-				<real>0.29411765933036804</real>
+				<real>0.61960784313725492</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
@@ -3758,8 +3758,10 @@
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewPreferredModeKey</key>
-	<integer>0</integer>
+	<integer>2</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
+	<false/>
+	<key>kCPKUseSystemColorPicker</key>
 	<false/>
 </dict>
 </plist>
