--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,6 +40,7 @@ set -g set-titles on
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status "on"
+set-option -g status-interval 1
 set-option -g status-justify "left"
 set-option -g status-left-style none
 set-option -g status-left-length "80"
