Add tmux clima update interval to 2 mins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,6 +35,9 @@ set -g renumber-windows on
 # Add a bit more scroll history in the buffer.
 set -g history-limit 50000
 
+# clima refresh interval
+set-option -g @clima_ttl 120 # Seconds
+
 # set terminal title
 set -g set-titles on
 
