--- a/Iterm/com.googlecode.iterm2.plist
+++ b/Iterm/com.googlecode.iterm2.plist
@@ -1549,13 +1549,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.62745100259780884</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
@@ -1627,13 +1627,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.62745100259780884</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
@@ -1790,6 +1790,19 @@
 				<real>0.87005096673965454</real>
 				<key>Red Component</key>
 				<real>0.87003046274185181</real>
+			</dict>
+			<key>Tab Color</key>
+			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
+				<key>Blue Component</key>
+				<real>0.31764706969261169</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
+				<key>Green Component</key>
+				<real>0.25882354378700256</real>
+				<key>Red Component</key>
+				<real>0.23137255012989044</real>
 			</dict>
 		</dict>
 		<key>gruvbox-light</key>
@@ -2942,13 +2955,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.62745100259780884</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
@@ -3020,13 +3033,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.62745100259780884</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.56470590829849243</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
@@ -3667,6 +3680,19 @@
 			<true/>
 			<key>Sync Title</key>
 			<false/>
+			<key>Tab Color</key>
+			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
+				<key>Blue Component</key>
+				<real>0.31764706969261169</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
+				<key>Green Component</key>
+				<real>0.25882354378700256</real>
+				<key>Red Component</key>
+				<real>0.23137255012989044</real>
+			</dict>
 			<key>Tags</key>
 			<array/>
 			<key>Terminal Type</key>
@@ -3695,6 +3721,8 @@
 			<key>Use Italic Font</key>
 			<true/>
 			<key>Use Non-ASCII Font</key>
+			<false/>
+			<key>Use Tab Color</key>
 			<false/>
 			<key>Vertical Spacing</key>
 			<real>1</real>
