Change tmux and vim navigation keys to use Ctrl instead of Alt/Option with arrow keys

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,21 +78,21 @@ bind-key h split-window -v
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'M-Left' if-shell "$is_vim" 'send-keys M-Left'  'select-pane -L'
-bind-key -n 'M-Down' if-shell "$is_vim" 'send-keys M-Down'  'select-pane -D'
-bind-key -n 'M-Up' if-shell "$is_vim" 'send-keys M-Up'  'select-pane -U'
-bind-key -n 'M-Right' if-shell "$is_vim" 'send-keys M-Right'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\\\'  'select-pane -l'"
+bind-key -n 'C-Left' if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
+bind-key -n 'C-Down' if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
+bind-key -n 'C-Up' if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
+bind-key -n 'C-Right' if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
+#tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+#if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+#    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
+#if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+#    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\\\'  'select-pane -l'"
 
-bind-key -T copy-mode-vi 'M-Left' select-pane -L
-bind-key -T copy-mode-vi 'M-Down' select-pane -D
-bind-key -T copy-mode-vi 'M-Up' select-pane -U
-bind-key -T copy-mode-vi 'M-Right' select-pane -R
-bind-key -T copy-mode-vi 'M-\' select-pane -l
+bind-key -T copy-mode-vi 'C-Left' select-pane -L
+bind-key -T copy-mode-vi 'C-Down' select-pane -D
+bind-key -T copy-mode-vi 'C-Up' select-pane -U
+bind-key -T copy-mode-vi 'C-Right' select-pane -R
+#bind-key -T copy-mode-vi 'M-\' select-pane -l
 
 # resize panes like vim
 bind < resize-pane -L 10
