Update Iterm settings

--- a/terminal/Iterm/com.googlecode.iterm2.plist
+++ b/terminal/Iterm/com.googlecode.iterm2.plist
@@ -3659,7 +3659,7 @@
 			<key>Non-ASCII Ligatures</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>FiraCodeNF-Med 17</string>
+			<string>FiraCodeNF-Ret 17</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
