--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -5,24 +5,69 @@ add_newline = true
 
 # Change the default prompt format
 format = """\
-[╭╴](238)$os\
-$all[╰─](238)$character"""
+[╭─](244) $os\
+$directory\
+$git_branch\
+$git_commit\
+$git_status\
+$fill\
+$all\
+[╰─](244)$character"""
 
+
+[fill]
+symbol = "·"
+style = "244"
 # Change the default prompt characters
 [character]
-success_symbol = "[](bold green)"
-error_symbol = "[](bold red)"
+success_symbol = "[](bold #50A45C)"
+error_symbol = "[](bold #d05858)"
 
 # No need for env variables as starship provides a way to show your current distro
 [os]
-format ='[$symbol](bold white)'   
+format ="[$symbol](bold white) "
 disabled = false
 
 [os.symbols]
-Windows = " "
-Arch = "󰣇 "
+Alpaquita = " "
+Alpine = " "
+Amazon = " "
+Android = " "
+Arch = " "
+Artix = " "
+CentOS = " "
+Debian = " "
+DragonFly = " "
+Emscripten = " "
+EndeavourOS = " "
+Fedora = " "
+FreeBSD = " "
+Garuda = "󰛓 "
+Gentoo = " "
+HardenedBSD = "󰞌 "
+Illumos = "󰈸 "
+Linux = " "
+Mabox = " "
+Macos = " "
+Manjaro = " "
+Mariner = " "
+MidnightBSD = " "
+Mint = " "
+NetBSD = " "
+NixOS = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+OracleLinux = "󰌷 "
+Pop = " "
+Raspbian = " "
+Redhat = " "
+RedHatEnterprise = " "
+Redox = "󰀘 "
+Solus = "󰠳 "
+SUSE = " "
 Ubuntu = " "
-Macos = " "
+Unknown = " "
+Windows = " "
 
 # Shows the username
 [username]
@@ -35,60 +80,65 @@ show_always = false
 [directory]
 truncation_length = 3
 truncation_symbol = "…/"
-home_symbol = "󰋞 ~"
+truncate_to_repo = false
+style = "#008DDE"
+repo_root_style =  "#008DDE bold"
 read_only_style = "197"
-read_only = "  "
-format = "at [$path]($style)[$read_only]($read_only_style) "
+read_only = "🔒 "
+format = "[$path]($style)[$read_only]($read_only_style) "
+
+[directory.path]
+style = "#008DDE bold" 
+#
 
 [git_branch]
-symbol = "󰊢 "
-format = "on [$symbol$branch]($style) "
-truncation_length = 4
-truncation_symbol = "…/"
-style = "bold green"
+symbol = "\uF126 "
+format = "[$symbol$branch]($style) "
+style = "#50A45C"
+
+[git_commit]
+tag_disabled = false
 
 [git_status]
-format = '[\($all_status$ahead_behind\)]($style) '
-style = "bold green"
-conflicted = "🏳"
-up_to_date = " "
-untracked = " "
-ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+format = "[$all_status$ahead_behind]($style)"
+style = "#50A45C"
+untracked = "[?${count}](#1750EB)"
+ahead = "⇡${count} "
+diverged = "⇡${ahead_count} ⇣${behind_count} "
 behind = "⇣${count}"
-stashed = "󰏗 "
-modified = " "
-staged = '[++\($count\)](green)'
-renamed = "󰖷 "
-deleted = " "
+stashed = "󰏗 ${count} "
+modified = "[!${count}](#be7e05) "
+staged = "[+${count}](#be7e05) "
+renamed = "[»${count}](#1750EB) "
+deleted = "[✗${count}](#d05858) "
+
+[aws]
+disabled = true
 
 [terraform]
-format = "via [ terraform $version]($style) 壟 [$workspace]($style) "
+format = "[ terraform $version]($style) 壟 [$workspace]($style) "
 
 [vagrant]
-format = "via [ vagrant $version]($style) "
+format = "[ vagrant $version]($style) "
 
 [docker_context]
-format = "via [ $context](bold blue) "
+format = "[ $context](bold #1750EB) "
 
 [helm]
-format = "via [ $version](bold purple) "
+format = "[ $version](bold #871094) "
 
 [python]
 symbol = "󰌠 "
 python_binary = "python3"
 
 [nodejs]
-format = "via [󰎙 $version](bold green) "
+format = "via [󰎙 $version](bold #50A45C) "
 disabled = true
 
 [ruby]
-format = "via [ $version]($style) "
+format = "[ $version]($style) "
 
 [kubernetes]
-format = 'on [ $context\($namespace\)](bold purple) '
-disabled = false
-[kubernetes.context_aliases]
-"clcreative-k8s-staging" = "cl-k8s-staging"
-"clcreative-k8s-production" = "cl-k8s-prod"
+format = 'on [ $context](bold #871094) '
+disabled = true
 
