Improve starship config for terminal

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -5,8 +5,9 @@ add_newline = true
 
 # Change the default prompt format
 format = """\
-[╭─](244) $os\
+[╭─](244)$os\
 $directory\
+${custom.git_host}\
 $git_branch\
 $git_commit\
 $git_status\
@@ -38,7 +39,7 @@ error_symbol = "[](bold #d05858)"
 
 # No need for env variables as starship provides a way to show your current distro
 [os]
-format ="[$symbol](bold white) "
+format =" [$symbol](bold white)"
 disabled = false
 
 [os.symbols]
@@ -97,12 +98,13 @@ truncate_to_repo = false
 style = "#008DDE"
 repo_root_style =  "#008DDE bold"
 read_only_style = "197"
-read_only = "🔒 "
-format = "[$path]($style)[$read_only]($read_only_style) "
+read_only = " 🔒"
+format = " [$path]($style)[$read_only]($read_only_style)"
+repo_root_format = " [$before_root_path]($before_repo_root_style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style)"
 
 [git_branch]
 symbol = "\uF126 "
-format = "[$symbol$branch]($style)"
+format = " [$symbol$branch]($style)"
 style = "#50A45C"
 
 [git_commit]
@@ -164,7 +166,7 @@ disabled = false
 format = "[ 󱁢 $version]($style)"
 
 [vagrant]
-format = "[  vagrant $version]($style)"
+format = "[ V vagrant $version]($style)"
 
 [docker_context]
 format = "[  $context](bold #1750EB)"
@@ -188,3 +190,40 @@ format = "[  $duration]($style)"
 
 [kotlin]
 format = "[ 󱈙 $version]($style)"
+
+[custom.git_host]
+command = """
+URL=$(command git ls-remote --get-url 2> /dev/null)
+if [[ "$URL" =~ "github" ]]; then
+    ICON=" "
+elif [[ "$URL" =~ "gitlab" ]]; then
+    ICON=" "
+elif [[ "$URL" =~ "bitbucket" ]];then
+    ICON=" "
+elif [[ "URL" =~ "azure" ]];then
+    ICON="󰿕"
+elif [[ "$URL" =~ "kernel" ]];then
+    ICON=" "
+elif [[ "$URL" =~ "archlinux" ]];then
+    ICON=" "
+elif [[ "$URL" =~ "gnu" ]];then
+    ICON=" "
+elif [[ "$URL" =~ "git" ]];then
+    ICON=" "
+else
+    ICON=" "
+    URL="localhost"
+fi
+for PATTERN in "https" "http" "git" "://" "@"; do
+    [[ "$URL" == "$PATTERN"* ]] && URL="${URL##$PATTERN}"
+done
+for PATTERN in "/" ".git"; do
+    [[ "$URL" == *"$PATTERN" ]] && URL="${URL%%$PATTERN}"
+done
+printf "%s" "$ICON"
+"""
+directories = [".git"]
+when = 'git rev-parse --is-inside-work-tree 2> /dev/null'
+shell = ["bash","--norc","--noprofile"]
+style = "#50A45C"
+format = " [$output]($style)"
