Fix URL variable for azure git repos in starship prompt

--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -198,17 +198,17 @@ if [[ "$URL" =~ "github" ]]; then
     ICON=" "
 elif [[ "$URL" =~ "gitlab" ]]; then
     ICON=" "
-elif [[ "$URL" =~ "bitbucket" ]];then
+elif [[ "$URL" =~ "bitbucket" ]]; then
     ICON=" "
-elif [[ "URL" =~ "azure" ]];then
+elif [[ "$URL" =~ "azure" ]]; then
     ICON="󰿕"
-elif [[ "$URL" =~ "kernel" ]];then
+elif [[ "$URL" =~ "kernel" ]]; then
     ICON=" "
-elif [[ "$URL" =~ "archlinux" ]];then
+elif [[ "$URL" =~ "archlinux" ]]; then
     ICON=" "
-elif [[ "$URL" =~ "gnu" ]];then
+elif [[ "$URL" =~ "gnu" ]]; then
     ICON=" "
-elif [[ "$URL" =~ "git" ]];then
+elif [[ "$URL" =~ "git" ]]; then
     ICON=" "
 else
     ICON=" "
