--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -193,37 +193,31 @@ format = "[ 󱈙 $version]($style)"
 
 [custom.git_host]
 command = """
-URL=$(command git ls-remote --get-url 2> /dev/null)
-if [[ "$URL" =~ "github" ]]; then
-    ICON=" "
-elif [[ "$URL" =~ "gitlab" ]]; then
-    ICON=" "
-elif [[ "$URL" =~ "bitbucket" ]]; then
-    ICON=" "
-elif [[ "$URL" =~ "azure" ]]; then
-    ICON="󰿕"
-elif [[ "$URL" =~ "kernel" ]]; then
-    ICON=" "
-elif [[ "$URL" =~ "archlinux" ]]; then
-    ICON=" "
-elif [[ "$URL" =~ "gnu" ]]; then
-    ICON=" "
-elif [[ "$URL" =~ "git" ]]; then
-    ICON=" "
-else
-    ICON=" "
-    URL="localhost"
-fi
-for PATTERN in "https" "http" "git" "://" "@"; do
-    [[ "$URL" == "$PATTERN"* ]] && URL="${URL##$PATTERN}"
-done
-for PATTERN in "/" ".git"; do
-    [[ "$URL" == *"$PATTERN" ]] && URL="${URL%%$PATTERN}"
-done
-printf "%s" "$ICON"
+        URL=$(git ls-remote --get-url 2> /dev/null)
+        if [[ "$URL" =~ "github.com" ]]; then
+            ICON=" "
+        elif [[ "$URL" =~ "gitlab.com" ]]; then
+            ICON=" "
+        elif [[ "$URL" =~ "bitbucket.com" ]]; then
+            ICON=" "
+        elif [[ "$URL" =~ "azure.com" ]] || [[ "$URL" =~ "visualstudio.com" ]]; then
+            ICON="󰿕 "
+        elif [[ "$URL" =~ "git" ]]; then
+            ICON=" "
+        else
+            ICON=" "
+            URL="localhost"
+        fi
+        for PATTERN in "https" "http" "git" "://" "@"; do
+            [[ "$URL" == "$PATTERN"* ]] && URL="${URL##$PATTERN}"
+        done
+        for PATTERN in "/" ".git"; do
+            [[ "$URL" == *"$PATTERN" ]] && URL="${URL%%$PATTERN}"
+        done
+        echo "$ICON"
 """
 directories = [".git"]
-when = 'git rev-parse --is-inside-work-tree 2> /dev/null'
+when = "git rev-parse --is-inside-work-tree 2> /dev/null"
 shell = ["bash","--norc","--noprofile"]
 style = "#50A45C"
 format = " [$output]($style)"
