--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -193,28 +193,7 @@ format = "[ 󱈙 $version]($style)"
 
 [custom.git_host]
 command = """
-        URL=$(git ls-remote --get-url 2> /dev/null)
-        if [[ "$URL" =~ "github.com" ]]; then
-            ICON=" "
-        elif [[ "$URL" =~ "gitlab.com" ]]; then
-            ICON=" "
-        elif [[ "$URL" =~ "bitbucket.com" ]]; then
-            ICON=" "
-        elif [[ "$URL" =~ "azure.com" ]] || [[ "$URL" =~ "visualstudio.com" ]]; then
-            ICON="󰿕 "
-        elif [[ "$URL" =~ "git" ]]; then
-            ICON=" "
-        else
-            ICON=" "
-            URL="localhost"
-        fi
-        for PATTERN in "https" "http" "git" "://" "@"; do
-            [[ "$URL" == "$PATTERN"* ]] && URL="${URL##$PATTERN}"
-        done
-        for PATTERN in "/" ".git"; do
-            [[ "$URL" == *"$PATTERN" ]] && URL="${URL%%$PATTERN}"
-        done
-        echo "$ICON"
+python $HOME/.config/get_git_host.py $PWD
 """
 directories = [".git"]
 when = "git rev-parse --is-inside-work-tree 2> /dev/null"
