--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -200,6 +200,6 @@ command = """
 python $HOME/.config/get_git_host.py $PWD
 """
 directories = [".git"]
-when = "git rev-parse --is-inside-work-tree 2> /dev/null"
+when = "git rev-parse --is-inside-work-tree"
 style = "#50A45C"
 format = " [$output]($style)"
