Change tokyonight theme variant for tmux from storm to moon

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,8 +54,7 @@ set-window-option -g window-status-separator ""
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-#source-file ~/Documents/IdeaProjects/terminal-configs/tmux/tmux-edge-light.conf
-source-file ~/Documents/IdeaProjects/terminal-configs/tmux/tmux-tokyonight-storm.conf
+source-file ~/Documents/IdeaProjects/terminal-configs/tmux/tmux-tokyonight-moon.conf
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -121,6 +120,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'xamut/tmux-network-bandwidth'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'xafarr/tmux-clima'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
