--- a/tmux/tmux-tokyonight-storm.conf
+++ b/tmux/tmux-tokyonight-storm.conf
@@ -2,18 +2,18 @@
 
 # TokyoNight colors for Tmux
 
-set -g mode-style "fg=#82aaff,bg=#3b4261"
+set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
-set -g message-style "fg=#82aaff,bg=#3b4261"
-set -g message-command-style "fg=#82aaff,bg=#3b4261"
+set -g message-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
 
 set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#82aaff"
+set -g pane-active-border-style "fg=#7aa2f7"
 
 set -g status "on"
 set -g status-justify "left"
 
-set -g status-style "fg=#82aaff,bg=#1e2030"
+set -g status-style "fg=#7aa2f7,bg=#1f2335"
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -21,18 +21,18 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-right "#[fg=#3b4261,bg=#3b4261,nobold,nounderscore,noitalics] #[fg=#82aaff,bg=#3b4261] #{clima}  🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1b1d2b,bg=#82aaff,bold] #h #[fg=#1b1d2b,bg=#82aaff,bold]"
+set -g status-right "#[fg=#82aaff,bg=#1e2030] #{prefix_highlight} #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics] #[fg=#7aa2f7,bg=#3b4261] #{clima}  🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1d202f,bg=#7aa2f7,bold] #h #[fg=#1d202f,bg=#7aa2f7,bold]"
 
-set -g status-left "#[fg=#1b1d2b,bg=#82aaff,bold] \ue795 #S #[fg=#82aaff,bg=#1e2030,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] \ue795 #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
 
 
-setw -g window-status-activity-style "underscore,fg=#828bb8,bg=#1e2030"
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#828bb8,bg=#1e2030"
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
 
-setw -g window-status-format "#[default]  #I:#W #[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#82aaff,bg=#3b4261,bold] #I:#W#{?window_zoomed_flag,*Z,} #[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]"
+setw -g window-status-format "#[default]  #I:#W #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#7aa2f7,bg=#3b4261,bold] #I:#W#{?window_zoomed_flag,*Z,} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
 
 # tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#ffc777]#[bg=#1e2030]#[fg=#1e2030]#[bg=#ffc777]"
-set -g @prefix_highlight_output_suffix ""
+set -g @prefix_highlight_output_prefix "#[fg=#1f2335]#[bg=#e0af68]"
+set -g @prefix_highlight_output_suffix ""
