Remove unnecessary color entries and improve spaces between tmux status right element

--- a/tmux/tmux-tokyonight-moon.conf
+++ b/tmux/tmux-tokyonight-moon.conf
@@ -21,7 +21,7 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-right "#[fg=#82aaff,bg=#1e2030] #{prefix_highlight} #[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics] #[fg=#82aaff,bg=#3b4261] #{clima}  🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1b1d2b,bg=#82aaff,bold] #h #[fg=#1b1d2b,bg=#82aaff,bold]"
+set -g status-right "#{prefix_highlight}#[fg=#82aaff,bg=#3b4261] #{clima}   🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1b1d2b,bg=#82aaff,bold] #h #[fg=#1b1d2b,bg=#82aaff,bold]"
 
 set -g status-left "#[fg=#1b1d2b,bg=#82aaff,bold] \ue795 #S #[fg=#82aaff,bg=#1e2030,nobold,nounderscore,noitalics]"
 
