--- a/tmux/tmux-tokyonight-storm.conf
+++ b/tmux/tmux-tokyonight-storm.conf
@@ -21,7 +21,7 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-right "#[fg=#82aaff,bg=#1e2030] #{prefix_highlight} #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics] #[fg=#7aa2f7,bg=#3b4261] #{clima}  🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1d202f,bg=#7aa2f7,bold] #h #[fg=#1d202f,bg=#7aa2f7,bold]"
+set -g status-right "#{prefix_highlight}#[fg=#7aa2f7,bg=#3b4261] #{clima}   🗓  %a %d %b, %Y  🕑 %I:%M %p #[fg=#1d202f,bg=#7aa2f7,bold] #h #[fg=#1d202f,bg=#7aa2f7,bold]"
 
 set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] \ue795 #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
 
