Change font in alacritty terminal to JetBrainsMono because there is no italics in FiraCode

--- a/terminal/alacritty/alacritty.toml
+++ b/terminal/alacritty/alacritty.toml
@@ -2,7 +2,7 @@
 import = ["~/.config/alacritty/tokyonight-moon.toml"]
 
 [font]
-normal = { family="FiraCode Nerd Font", style="Retina" }
+normal = { family="JetBrainsMono Nerd Font", style="Regular" }
 size = 17.0
 
 [colors]
