--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Initial setup
 set -g default-terminal tmux-256color
-set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm-kitty:Tc,alacritty:RGB,*256col*:Tc"
 set -g status-keys vi
 set-option -g focus-events on
 
