--- a/terminal/alacritty/alacritty.toml
+++ b/terminal/alacritty/alacritty.toml
@@ -1,6 +1,9 @@
 # Import external configurations
 import = ["~/.config/alacritty/tokyonight-moon.toml"]
 
+[env]
+TERM = "xterm-256color"
+
 [font]
 normal = { family="JetBrainsMono Nerd Font", style="Regular" }
 size = 17.0
