Change iTerm2 font from FiraCode to JetBrainsMono

--- a/terminal/Iterm/com.googlecode.iterm2.plist
+++ b/terminal/Iterm/com.googlecode.iterm2.plist
@@ -5023,7 +5023,7 @@
 			<key>Non-ASCII Ligatures</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>FiraCodeNF-Ret 17</string>
+			<string>JetBrainsMonoNF-SemiBold 17</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
