Change undercurl style for kitty

--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -8,7 +8,7 @@ italic_font      JetBrainsMono Nerd Font Medium Italic
 bold_italic_font JetBrainsMono Nerd Font Bold Italic
 font_size 17.0
 disable_ligatures cursor
-undercurl_style thin-dense
+undercurl_style thin-sparse
 text_composition_strategy platform
 
 #: }}}
