--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -35,6 +35,9 @@ set -g renumber-windows on
 # Add a bit more scroll history in the buffer.
 set -g history-limit 50000
 
+# set statusline position to top
+set-option -g status-position bottom
+
 # clima refresh interval
 set-option -g @clima_ttl 5 # Minutes
 
