Improve the comment and add new line for readability in tmux.conf

--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -35,7 +35,7 @@ set -g renumber-windows on
 # Add a bit more scroll history in the buffer.
 set -g history-limit 50000
 
-# set statusline position to top
+# set statusline position to top/bottom
 set-option -g status-position bottom
 
 # clima refresh interval
@@ -85,6 +85,7 @@ bind-key -n 'C-Left' if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
 bind-key -n 'C-Down' if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
 bind-key -n 'C-Up' if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
 bind-key -n 'C-Right' if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
+
 #tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 #if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
 #    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
