--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -54,6 +54,12 @@ bell_on_tab "🔔 "
 remember_window_size  yes
 initial_window_width  1920
 initial_window_height 1080
+# set top, right, bottom and left.
+draw_minimal_borders no
+window_margin_width 0 10 10 10
+window_padding_width 0
+hide_window_decorations no
+placement_strategy top-left
 
 #: }}}
 
