--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -36,10 +36,13 @@ set -g renumber-windows on
 set -g history-limit 50000
 
 # set statusline position to top/bottom
-set-option -g status-position bottom
+set-option -g status-position top
 
-# clima refresh interval
-set-option -g @clima_ttl 5 # Minutes
+# clima refresh interval in Minutes
+set-option -g @clima_ttl 5
+
+# clima location
+set-option -g @clima_location ""
 
 # set terminal title
 set -g set-titles on
@@ -124,7 +127,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'xamut/tmux-network-bandwidth'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'xafarr/tmux-clima'
 
 if "test ! -d ~/.tmux/plugins/tpm" \
